--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
                 >
                 <!-- desktop -->
                 <source srcset="
-                .img/desktop/banner.jpg 1x,
-                .img/desktop/banner@2x.jpg 2x,
-                "
-                media="(min-width:1000px)"
-
+                .img/desktop/banner.jpg,
+                .img/desktop/banner@2x.jpg"
                 
+                media="(min-width:1000px)"
                 >
                 <img class="banner" src="" alt="nubes entre montañas">
 
